# rusty-brain

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: covariance.rs  fft.rs  filter.rs  lib.rs  s_transform.rs  wavelet.rs
src/read/: bids.rs  brainvision_core.rs  mod.rs
